Fix genotype spacing for peas

--- a/src/components/stacked-organism.pea.sass
+++ b/src/components/stacked-organism.pea.sass
@@ -7,3 +7,6 @@
   .hetero-stack
     border-style: dashed
     transition-duration: 0s
+
+  .genotype-label.child-mouse
+    top: -2px
